# Todo-App

./: .env  Cargo.toml  ss.txt
migrations/2023-06-27-104613_create_todo_table/: up.sql
migrations/2023-06-27-105006_create_user_table/: up.sql
src/: main.rs
src/api/: api.rs
src/models/: mod.rs  schema.rs  todo.rs  user.rs
src/repository/: database.rs
