[package]
name = "Todo-App"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
uuid = { version = "1.4.0", features = ["v4"] }
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono", "uuid"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


